# logto-management-skill

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: prd.md  rfc.md  skill.md  test.md  working.md
scripts/: run_cli.sh
skills/: skill.md
src/logto_management_skill/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_client.py
