[project]
name = "logto-management-skill"
version = "0.1.0"
description = "CLI and Python library for managing Logto users, roles, and organizations via the Management API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "grapeot" }]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
logto-mgmt = "logto_management_skill.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logto_management_skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]